changed site language

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ url: https://atmcgrath.github.io
 
 baseurl: /demo-site
 
+lang: fr
+
 title: Axolotl
 
 description: The story of an adorable creature
